<resources>
    <string name="app_name">Onsite Inventory</string>
    <string name="start_instructions">Type your show\'s Showcode into the text box below and then tap New to start a new inventory or Existing to work on a previously started inventory.</string>
    <string name="show_hint">Showcode</string>
    <string name="in_but">Inbound</string>
    <string name="out_but">Outbound</string>
    <string name="new_but">New</string>
    <string name="exist_but">Existing</string>
    <string name="label_instructions">Tap the type of label you need to fill out.</string>
    <string name="ts_but">Touchscreen</string>
    <string name="ac_but">Acer</string>
    <string name="sr_but">Server</string>
    <string name="pl_but">Pelican</string>
    <string name="an_but">Anvil</string>
    <string name="ship_instructions">Enter a showcode below to set up shipping for labels.  If this is an outbound, enter the email address of the show\'s ODM to email them a copy of your outbound inventory.
    Touch Add Shipment to add the showcode and email to your inventory.  Once you have entered all shipments, touch Start Inventory to start filling out labels.</string>
    <string name="email_ship_inventory">ODM Email Address</string>
    <string name="add_ship_button">Add Shipment</string>
    <string name="inventory_ship_button">Start Inventory</string>
</resources>
